add mywords.value =" ";

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ btn.addEventListener('click', function(){
     playGame();
   }else if(this.innerText == 'Done'){
     typeword.disabled = true;
+    mywords.value =" ";
     btn.innerText = "Start";
     endplay();
   }
